Fixed menu too long

--- a/resources/css/index/style.css
+++ b/resources/css/index/style.css
@@ -199,11 +199,12 @@
 		@apply
 			grid
 			grid-cols-5
-			m-4
+			mt-4
+			mx-4
 			md:grid-cols-9
-			md:my-8
+			md:mt-8
 			md:mx-12
-			xl:my-12
+			xl:mt-12
 			xl:mx-20;	
 	}
 
